[gd_scene load_steps=7 format=3 uid="uid://ipog80gubyp7"]

[ext_resource type="Script" uid="uid://dab8fqgniq883" path="res://Scripts/Maps/race2.gd" id="1_ers52"]
[ext_resource type="Texture2D" uid="uid://dk1jsd8c1pd3u" path="res://Draws/Race1.png" id="1_sdho7"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_cql6n"]
a = Vector2(1148, 654)
b = Vector2(1151, -5)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_scjwe"]
a = Vector2(-575, 326)
b = Vector2(581, 325)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_nuebd"]
a = Vector2(581, -328)
b = Vector2(-575, -325)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_loawa"]
a = Vector2(127, -178)
b = Vector2(127, -328)

[node name="Race1" type="CharacterBody2D"]
script = ExtResource("1_ers52")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Race1" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(2.30389, 2.30389)
texture = ExtResource("1_sdho7")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
light_mask = 3
visibility_layer = 3
position = Vector2(-302, -180)
polygon = PackedVector2Array(-1, 0, 641, 3, 674, 25, 713, 84, 724, 116, 736, 149, 752, 209, 753, 299, 737, 361, 712, 387, -49, 387, -68, 374, -80, 343, -94, 304, -97, 281, -97, 181, -87, 152, -85, 116, -77, 87, -68, 54, -53, 23, -41, 10, -31, 9, -22, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-575, -325)
shape = SubResource("SegmentShape2D_cql6n")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(-575, -325)
shape = SubResource("SegmentShape2D_cql6n")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-1726, -320)
shape = SubResource("SegmentShape2D_cql6n")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
shape = SubResource("SegmentShape2D_scjwe")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="."]
shape = SubResource("SegmentShape2D_nuebd")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("SegmentShape2D_loawa")

[node name="Label" type="Label" parent="."]
offset_left = -575.0
offset_top = -326.0
offset_right = -436.0
offset_bottom = -303.0

[node name="Label2" type="Label" parent="."]
offset_left = -575.0
offset_top = -299.0
offset_right = -436.0
offset_bottom = -276.0

[node name="Label3" type="Label" parent="."]
offset_left = -575.0
offset_top = -273.0
offset_right = -436.0
offset_bottom = -250.0

[node name="LapTime" type="Timer" parent="."]
wait_time = 4096.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
